--- a/ms.tex
+++ b/ms.tex
@@ -8,7 +8,7 @@
 \usepackage{enumitem}
 \usepackage{framed}
 
-\shortauthors{Y. Hezaveh}
+\shortauthors{Y. Hezaveh et al.}
 
 \usepackage{color}
 \newcommand{\blue}{\textcolor{blue}}
@@ -24,8 +24,8 @@
 
 \begin{abstract}  
 \noindent
-We examine the prospects of detecting demagnified images of gravitational lenses in observations of strongly lensed mm-wave molecular emission lines with ALMA. We model the lensing galaxies as a superposition of a dark matter component, a stellar population, and a central supermassive black hole and forecast the detection of the central images for a range of relevant parameters (e.g. stellar core and black hole mass).
-We find that over a large range of acceptable parameters, future deep observations of lensed molecular lines with ALMA will be able to detect the central images at $\gtrsim 3\sigma$ significance. We use Fisher analysis to examine the  constraints that could be placed on these parameters in various scenarios. 
+We examine the prospects of detecting demagnified images of gravitational lenses in observations of strongly lensed mm-wave molecular emission lines with ALMA. We model the lensing galaxies as a superposition of a dark matter component, a stellar component, and a central supermassive black hole and forecast the detection of the central images for a range of relevant parameters (e.g. stellar core and black hole mass).
+We find that over a large range of acceptable parameters, future deep observations of lensed molecular lines with ALMA should be able to detect the central images at $\gtrsim 3\sigma$ significance. We use a Fisher analysis to examine the  constraints that could be placed on these parameters in various scenarios and find that for large stellar cores, both the core size and the mass of the central SMBHs could be measured. We also study the prospects of detecting binary SMBHs in such observations, and find that only under very rare condition such observations could be 
 
 \end{abstract}
 
@@ -76,11 +76,10 @@ Moreover, if observed in the optical, absorption in the central dense regions of
 %\end{framed}
 
 
-%\begin{framed}
-\red{needs work}
-The individual behavior \citep{} and statistical properties of central images in lens populations have been extensively studied \citep[e.g.][]{Wallington:93, Evans:02, Keeton:03},  suggesting that central images could have a wide range of magnifications. 
-Observational searches for these images have found a number of candidates \citep[e.g.][]{Inada:05}, however, only one secure detections of a central image of a galaxy-scale lens exists to date \citep{Winn:04}.\red{(Inada:08 is a cluster?)}
-To avoid the possibility of absorption in the lens, most studies have focused on strongly lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from faint emission from the lens galaxies.
+
+The individual behavior and statistical properties of central images in lensed populations have been extensively studied \citep[e.g.][]{Wallington:93, Evans:02, Keeton:03}. These studies show that central images could have a wide range of magnifications \citep[e.g.,][]{Keeton:03}. 
+Observational searches for these images have found a number of candidates \citep[e.g.][]{}. Although observations
+of central images in group and cluster lenses are not uncommon \citep[e.g.,][]{Inada:05}, only one secure detections of a central image of a galaxy-scale lens exists to date \citep{Winn:04}. To avoid the possibility of absorption in the lens, most searches have focused on strongly lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from potential faint emission from the lens galaxies.
 
 %To avoid confusion between a central image and faint radio emission from the lens galaxies 
 
@@ -99,9 +98,9 @@ A new large population of strong lenses has recently been discovered in mm-bands
 In particular, ALMA observations of these sources have revealed that the background galaxies are dusty, starburst, high redshift galaxies, containing a wealth of cold molecular gas \citep{Weiss:13}.  These observations showed that the extreme brightness of the sources in combination with the high sensitivity of ALMA results in very high signal to noise ratios \citep[e.g. the lens models in][were based on just $\sim50$ second long observations]{hezaveh:13b}.
 Motivated by the discovery of this population and the operation of ALMA, here we revisit the issue of detecting central images.
 Deep ALMA observations of molecular line emission in these sources are likely to be carried out for various reasons \citep[e.g.,][]{hezaveh:14a,hezaveh:14b}. If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
-In contrast to lensed quasars, these sources are extended over hundreds of parsecs and can cover a larger area of the source plane. This can allow them to occupy the less demagnified regions of the source plane, allowing a higher flux for the central image \citep[the opposite effect of magnification damping due to extended sources,, see e.g.][]{hezaveh:11}.
+In contrast to lensed quasars, these sources are extended over hundreds of parsecs and can cover a larger area of the source plane. This can allow them to occupy the less demagnified regions of the source plane, allowing a higher flux for the central image \citep[the opposite effect of magnification damping due to extended sources, see e.g.,][]{hezaveh:11}.
 
- In this letter, we explore the possibility of detecting the central lensed images in such deep observations and investigate the constraints that could be placed on the core size, mass of SMBHs, and the slope of the density profiles from detection, or non-detection of such images. We also examine if binary SMBHs can possibly be detected in such observations. 
+ In this letter, we explore the possibility of detecting central lensed images in such deep observations and investigate the constraints that could be placed on the core size, mass of SMBHs, and the slope of the density profiles from detection, or non-detection of such images. We also examine if binary SMBHs can possibly be detected in such observations. 
  In Section 2 we describe the simulations, in Section 3 we present the results and discuss them, and finally conclude in Section 4. We use a flat $\Lambda$CDM cosmology with $h=0.71$ and $\Omega_M=0.267$.
  
 % the distribution of matter in the innermost regions of galaxies from detection or non-detection of such central images.\\ \\
@@ -239,7 +238,7 @@ We also find that when the core size is larger, the constraints on the density p
 \includegraphics[trim= 0 0 0 0, width=0.45\textwidth]{figures/f_04_B.eps}
 \centering
 \end{center}
-\caption{ Covariance matrix of parameters for a few different scenarios.
+\caption{ Parameter covariance matrices for two simulations (after marginalization over nuisance parameters). Top panel shows that when the core size is small the mass of the SMBH is not measured and only an upper limit can be placed on it. The bottom panel, shows that for larger core sizes, the mass of the SMBH could be measured by high significance. 
 \label{fig:4}}
 \end{figure}
 
