--- a/ms.tex
+++ b/ms.tex
@@ -260,7 +260,7 @@ We found that $\sim10\%$ of the simulations, in which the core size was larger t
 This number is much larger than what is calculated in \citet{Li:12}, since they estimated  the probabilities for point sources, appropriate for lensed quasar samples. The extended structure of the background source can significantly increase the probability of 
 
   Although this number may seems promising, the prospects of such measurements will be limited by the number of discovered bright central images, which based on their current dearth, may be few.
-We conclude that, only under rare conditions, and with very long observations ($>40$ hours), central image may allow us to probe binary SMBHs. The prospects of such measurement will ultimately depend on discoveries of much larger samples of lenses \citep{}. 
+We conclude that, only under rare conditions, and with very long observations ($>40$ hours), central image may allow us to probe binary SMBHs. The prospects of such measurement will ultimately depend on discoveries of much larger samples of lenses.
 
 %The magnified images of the lens allow a detailed reconstruction of the background source.  It is therefore easy to distinguish that the structure in the central image is not due to the structure of the source, but are caused by lensing by binary SMBHs.
 %Since the suitability for such measurements will depend on the core size and slope of the stellar light, future high resolution observations with thirty meter telescopes, may help select systems with the right range of morphological parameters, to be followed up.
