--- a/ms.tex
+++ b/ms.tex
@@ -25,7 +25,7 @@
 \begin{abstract}  
 \noindent
 We examine the prospects of detecting demagnified images of gravitational lenses in observations of strongly lensed mm-wave molecular emission lines with ALMA. We model the lensing galaxies as a superposition of a dark matter component, a stellar component, and a central supermassive black hole and forecast the detection of the central images for a range of relevant parameters (e.g. stellar core and black hole mass).
-We find that over a large range of acceptable parameters, future deep observations of lensed molecular lines with ALMA should be able to detect the central images at $\gtrsim 3\sigma$ significance. We use a Fisher analysis to examine the  constraints that could be placed on these parameters in various scenarios and find that for large stellar cores, both the core size and the mass of the central SMBHs could be measured. We also study the prospects of detecting binary SMBHs in such observations, and find that only under very rare condition such observations could be 
+We find that over a large range of acceptable parameters, future deep observations of lensed molecular lines with ALMA should be able to detect the central images at $\gtrsim 3\sigma$ significance. We use a Fisher analysis to examine the  constraints that could be placed on these parameters in various scenarios and find that for large stellar cores, both the core size and the mass of the central SMBHs could be measured. We also study the prospects of detecting binary SMBHs with such observations, and find that under rare conditions we may be able to measure the massed of both SMBHs using the distortions of the central images.
 
 \end{abstract}
 
@@ -174,14 +174,16 @@ We used finite differencing of visibilities to calculate the gradients, and marg
 \section{Results and Discussions}
 \subsection{Detection of central images with ALMA}
 %In this section, we estimate the detection significance of central lensed images of molecular lines with ALMA. 
-As discussed earlier, the fluxes of central images strongly depend on the slope of the lensing potential, the core size, and the mass of the central SMBHs.  Figure \ref{fig:3} shows the detection significance of a central image for a range of these parameters in a 10-h long ALMA observation. The grey curves (dark to light) correspond to profiles with slopes of $\gamma=0.9, 1.0, 1.1,$ and 1.2.  As seen in this figure, larger stellar cores result in brighter images. %Lensing studies have shown that the total profiles of galaxies are very close to isothermal \red{cite{}}. 
-When $\gamma=1.0$ and with a core size larger than 150 pc, such observations should be able to detect the central images with more than $5\sigma$ significance. For significantly shallower ($\gamma<0.8$) profile slopes with larger cores, the central image is \emph{magnified} and its detection should be trivial.  The magnification and flux of central images is also influenced by SMBHs.
+The fluxes of central images strongly depend on the slope of the lensing potential, the core size, and the mass of the central SMBHs.  Figure \ref{fig:3} shows the detection significance of a central image for a range of these parameters in a 10-h long ALMA observation. The grey curves (dark to light) correspond to profiles with slopes of $\gamma=0.9, 1.0, 1.1,$ and 1.2.  
+The source has a Gaussian profile with an rms of 600 pc and the lensed images have a fold configuration. 
+As seen in this figure, larger stellar cores result in brighter images. %Lensing studies have shown that the total profiles of galaxies are very close to isothermal \red{cite{}}. 
+When $\gamma=1.0$ and with a core size larger than 150 pc, such observations should be able to detect the central images with more than $5\sigma$ significance. For significantly shallower ($\gamma<0.8$) profiles and larger cores, the central image is \emph{magnified} and its detection should be trivial.  The magnification and flux of central images is also influenced by SMBHs.
 SMBHs demagnify the images on scales comparable to the size of their Einstein radii ($\sim30$ mas for a $2\times10^8M_{\odot}$ SMBH).
 The dashed curves in Figure \ref{fig:3} show the suppression of the fluxes of central images in presence of a $2\times10^8M_{\odot}$ SMBH.
 
-As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, plausible parameters (e.g. core sizes) predict  a wide range of magnifications for   central images. Although for some plausible parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2\times10^8 M_{\odot}$,$R_{core}<300 pc$ ) there is little chance of detecting the central images, over a non-negligable fraction of parameter space the central images may be detectable. 
+As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, plausible parameters predict  a wide range of magnifications for   central images. Although for some plausible parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2\times10^8 M_{\odot}$,$R_{core}<300 pc$ ) there is little chance of detecting the central images, over a non-negligable fraction of parameter space the central images may be detectable. 
 
-We also find that the detection significance of the central images can increase by about $3\sigma$ for an extended source with a radius of 1 kpc compared to a point source. Since extended sources occupy a larger area of the source plane, which may cover regions with higher magnifications, the resulting flux can be larger than the flux of more compact sources.
+We also find that the detection significance of the central images can significantly increase for an extended source with a radius of 1 kpc compared to a point source. Since extended sources occupy a larger area of the source plane, which may cover regions with higher magnifications, the resulting flux can be larger than the flux of more compact sources. The red curves in Figure \ref{fig:3} show the drop in the flux of the image for a smaller (300 pc) source. 
 %\begin{framed}
 %1) We evaluate the detection significance of central images over a range of relevant parameters. \\ \\
 %2) Figure 4 shows our results for a 10-hr long observation with ALMA\\ \\
@@ -207,7 +209,7 @@ The source has a Gaussian light profile with an rms of 600 pc. The red curves sh
 \end{figure}
 
 \subsection{SMBHs and the core size}
-We studied the constraints that could be placed on the slope of the density profile, the size of the stellar core, and the mass of the SMBHs in such deep observations. 
+Here, we study the constraints that could be placed on the slope of the density profile, the size of the stellar core, and the mass of the SMBHs in such deep observations. 
 We performed a Fisher analysis to examine the constrains and parameter degeneracies in simulations in which the central images are detected, as well as those in which they are below the detection limit. All model parameters were included in the Fisher matrix, and nuisance parameters were later marginalize over (e.g. intrinsic source flux and position) to obtain the marginalized likelihood of the relevant parameters.  
  Figure \ref{fig:4} shows the parameter covariance for two examples with different core radii (top panel:  $R_{core}$=170 pc, bottom panel: $R_{core}$=450 pc).
 % . As seen in Figure \ref{fig:3},  this parameter combination results in a $\sim3\sigma$ detection of the central image. 
@@ -215,7 +217,7 @@ We found that when $\gamma=1$, core sizes larger than 100 pc can be measured wit
 the mass of SMBH is degenerate with the core size: larger cores result in brighter images, whose flux can be supressed by a more massive SMBH.
 This degeneracy,  however,  breaks when the core size is very large. 
 Large cores produce more extended central images that are spatially resolved. The distortion caused by a SMBH can distort this image on smaller scales, resulting in a distinct dip in its surface brightness. %, which breaks the degeneracy of the SMBH with the core size (for point sources this will be observed as the plotting of the central image by the SMBH). %Rusin  Keeton Winn 2005
-We found that for cores with a radius larger than $200$ pc, central SMBH masses could be measured with high significance (e.g., bottom panel of Figure \ref{fig:4}), but for smaller core sizes, only upper limits on the mass of SMBHs can be placed.
+We find that for cores with a radius larger than $200$ pc, central SMBH masses can be measured with high significance (e.g., bottom panel of Figure \ref{fig:4}), but for smaller core sizes, only upper limits on the mass of SMBHs can be placed.
 We also find that when the core size is larger, the constraints on the density profile slope are stronger.
 
 %\begin{framed}
@@ -245,7 +247,8 @@ We also find that when the core size is larger, the constraints on the density p
 
 \subsection{Detection of Binary SMBHs}
 We also investigated the possibility of detecting binary SMBHs using the perturbations that they induce on lensed central images. 
-We randomly placed two SMBHs with masses of $4\times10^8 M_{\odot}$ each in a circle of radius of 1 kpc from the center of the galaxy and, using the Fisher analysis, computed the detection significance of their masses. We found that in most cases, it is not possible to measure the mass of both SMBHs, either because they are not near the central images or due to the degeneracy between their masses, their positions, and the core radius, or because the distortions in the central images are unresolved.
+We placed two SMBHs with masses of $4\times10^8 M_{\odot}$ each in a random position incise a circle of radius of 1 kpc from the center of the galaxy and, using the Fisher analysis, computed the detection significance of their masses. 
+We found that in most cases, it is not possible to measure the mass of both SMBHs, either because they are not near the central images or due to the degeneracy between their masses, their positions, and the core radius, or because the distortions in the central images are unresolved.
 However, when the central images are fairly extended (due to a shallow density slope and a large core size), a larger fraction of the inner 1 kpc region is covered by the central image, increasing the probability of lensing by SMBHs. Such images also have larger fluxes, increasing the snr of the observations and they also allow for the detection of fairly separated SMBHs. In this case the SMBHs can affect different parts of the central image, reducing the degeneracy between their masses.
 Under such conditions, we found some configurations that allowed a detection of both SMBH masses. The constraints on SMBH masses in such observations arise from the distortions in the resolved \emph{shape} of the central images. Figure \ref{fig:5} shows an example of such configuration when $\gamma = 0.9$ and $R_{\mathrm{core}}=300$ pc. Left panel shows the central image without the effects of SMBHs and the right panel shows its morphology in presence of two SMBHs. 
 
@@ -286,7 +289,7 @@ We also studied the possibility of detecting binary SMBHs and found that only un
 
 
 \acknowledgements{
-Acknowledge NSF?}
+\red{Acknowledge NSF?}}
 
 \bibliographystyle{apj}
 \bibliography{references}
