--- a/ms.tex
+++ b/ms.tex
@@ -292,8 +292,184 @@ We also studied the possibility of detecting binary SMBHs and found that only un
 \red{Acknowledge NSF?}}
 
 \bibliographystyle{apj}
-\bibliography{references}
+%\bibliography{references}
 
 %\input{ms.bbl}
+\begin{thebibliography}{28}
+\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
+
+\bibitem[{{Barnes} \& {Hernquist}(1992)}]{Barnes:92}
+{Barnes}, J.~E., \& {Hernquist}, L. 1992, \araa, 30, 705
+
+\bibitem[{{Begelman} {et~al.}(1980){Begelman}, {Blandford}, \&
+  {Rees}}]{Begelman:80}
+{Begelman}, M.~C., {Blandford}, R.~D., \& {Rees}, M.~J. 1980, \nat, 287, 307
+
+\bibitem[{{Bussmann} {et~al.}(2013){Bussmann}, {P{\'e}rez-Fournon}, {Amber},
+  {Calanog}, {Gurwell}, {Dannerbauer}, {De Bernardis}, {Fu}, {Harris}, {Krips},
+  {Lapi}, {Maiolino}, {Omont}, {Riechers}, {Wardlow}, {Baker}, {Birkinshaw},
+  {Bock}, {Bourne}, {Clements}, {Cooray}, {De Zotti}, {Dunne}, {Dye}, {Eales},
+  {Farrah}, {Gavazzi}, {Gonz{\'a}lez Nuevo}, {Hopwood}, {Ibar}, {Ivison},
+  {Laporte}, {Maddox}, {Mart{\'{\i}}nez-Navajas}, {Michalowski}, {Negrello},
+  {Oliver}, {Roseboom}, {Scott}, {Serjeant}, {Smith}, {Smith}, {Streblyanska},
+  {Valiante}, {van der Werf}, {Verma}, {Vieira}, {Wang}, \&
+  {Wilner}}]{bussmann:13}
+{Bussmann}, R.~S., {P{\'e}rez-Fournon}, I., {Amber}, S., {et~al.} 2013, \apj,
+  779, 25, 1309.0836
+
+\bibitem[{{Ebisuzaki} {et~al.}(1991){Ebisuzaki}, {Makino}, \&
+  {Okumura}}]{Ebisuzaki:91}
+{Ebisuzaki}, T., {Makino}, J., \& {Okumura}, S.~K. 1991, \nat, 354, 212
+
+\bibitem[{{Evans} \& {Hunter}(2002)}]{Evans:02}
+{Evans}, N.~W., \& {Hunter}, C. 2002, \apj, 575, 68, astro-ph/0204206
+
+\bibitem[{{Ferrarese} \& {Merritt}(2000)}]{Ferrarese:00}
+{Ferrarese}, L., \& {Merritt}, D. 2000, \apjl, 539, L9, astro-ph/0006053
+
+\bibitem[{{Ferrarese} {et~al.}(2006){Ferrarese}, {C{\^o}t{\'e}}, {Jord{\'a}n},
+  {Peng}, {Blakeslee}, {Piatek}, {Mei}, {Merritt}, {Milosavljevi{\'c}},
+  {Tonry}, \& {West}}]{Ferrarese:06}
+{Ferrarese}, L., {C{\^o}t{\'e}}, P., {Jord{\'a}n}, A., {et~al.} 2006, \apjs,
+  164, 334, astro-ph/0602297
+
+\bibitem[{{Gebhardt} {et~al.}(2000){Gebhardt}, {Bender}, {Bower}, {Dressler},
+  {Faber}, {Filippenko}, {Green}, {Grillmair}, {Ho}, {Kormendy}, {Lauer},
+  {Magorrian}, {Pinkney}, {Richstone}, \& {Tremaine}}]{Gebhardt:00}
+{Gebhardt}, K., {Bender}, R., {Bower}, G., {et~al.} 2000, \apjl, 539, L13,
+  astro-ph/0006289
+
+\bibitem[{{Golse} \& {Kneib}(2002)}]{Golse:02}
+{Golse}, G., \& {Kneib}, J.-P. 2002, \aap, 390, 821, astro-ph/0112138
+
+\bibitem[{{Hezaveh} {et~al.}(2014){Hezaveh}, {Dalal}, {Holder}, {Kisner}, \&
+  {Kuhlen}}]{hezaveh:14a}
+{Hezaveh}, Y., {Dalal}, N., {Holder}, G., {Kisner}, T., \& {Kuhlen}, M. 2014,
+  ArXiv e-prints, 1403.2720
+
+\bibitem[{{Hezaveh}(2014)}]{hezaveh:14b}
+{Hezaveh}, Y.~D. 2014, \apjl, 791, L41, 1408.3631
+
+\bibitem[{{Hezaveh} \& {Holder}(2011)}]{hezaveh:11}
+{Hezaveh}, Y.~D., \& {Holder}, G.~P. 2011, \apj, 734, 52, 1010.0998
+
+\bibitem[{{Hezaveh} {et~al.}(2013){Hezaveh}, {Marrone}, {Fassnacht}, {Spilker},
+  {Vieira}, {Aguirre}, {Aird}, {Aravena}, {Ashby}, {Bayliss}, {Benson},
+  {Bleem}, {Bothwell}, {Brodwin}, {Carlstrom}, {Chang}, {Chapman}, {Crawford},
+  {Crites}, {De Breuck}, {de Haan}, {Dobbs}, {Fomalont}, {George}, {Gladders},
+  {Gonzalez}, {Greve}, {Halverson}, {High}, {Holder}, {Holzapfel}, {Hoover},
+  {Hrubes}, {Husband}, {Hunter}, {Keisler}, {Lee}, {Leitch}, {Lueker},
+  {Luong-Van}, {Malkan}, {McIntyre}, {McMahon}, {Mehl}, {Menten}, {Meyer},
+  {Mocanu}, {Murphy}, {Natoli}, {Padin}, {Plagge}, {Reichardt}, {Rest}, {Ruel},
+  {Ruhl}, {Sharon}, {Schaffer}, {Shaw}, {Shirokoff}, {Stalder}, {Staniszewski},
+  {Stark}, {Story}, {Vanderlinde}, {Wei{\ss}}, {Welikala}, \&
+  {Williamson}}]{hezaveh:13b}
+{Hezaveh}, Y.~D., {Marrone}, D.~P., {Fassnacht}, C.~D., {et~al.} 2013, \apj,
+  767, 132, 1303.2722
+
+\bibitem[{{Inada} {et~al.}(2005){Inada}, {Oguri}, {Keeton}, {Eisenstein},
+  {Castander}, {Chiu}, {Hall}, {Hennawi}, {Johnston}, {Pindor}, {Richards},
+  {Rix}, {Schneider}, \& {Zheng}}]{Inada:05}
+{Inada}, N., {Oguri}, M., {Keeton}, C.~R., {et~al.} 2005, \pasj, 57, L7,
+  astro-ph/0503310
+
+\bibitem[{{Keeton}(2003)}]{Keeton:03}
+{Keeton}, C.~R. 2003, \apj, 582, 17, astro-ph/0206243
+
+\bibitem[{{Kormendy} \& {Bender}(2009)}]{Kormendy:09}
+{Kormendy}, J., \& {Bender}, R. 2009, \apjl, 691, L142, 0901.3778
+
+\bibitem[{{Kormendy} \& {Ho}(2013)}]{Kormendy:13}
+{Kormendy}, J., \& {Ho}, L.~C. 2013, \araa, 51, 511, 1304.7762
+
+\bibitem[{{Kormendy} \& {Richstone}(1995)}]{Kormendy:95}
+{Kormendy}, J., \& {Richstone}, D. 1995, \araa, 33, 581
+
+\bibitem[{{Li} {et~al.}(2012){Li}, {Mao}, {Gao}, {Loeb}, \& {di
+  Stefano}}]{Li:12}
+{Li}, N., {Mao}, S., {Gao}, L., {Loeb}, A., \& {di Stefano}, R. 2012, \mnras,
+  419, 2424, 1110.0887
+
+\bibitem[{{Negrello} {et~al.}(2010){Negrello}, {Hopwood}, {De Zotti}, {Cooray},
+  {Verma}, {Bock}, {Frayer}, {Gurwell}, {Omont}, {Neri}, {Dannerbauer},
+  {Leeuw}, {Barton}, {Cooke}, {Kim}, {da Cunha}, {Rodighiero}, {Cox},
+  {Bonfield}, {Jarvis}, {Serjeant}, {Ivison}, {Dye}, {Aretxaga}, {Hughes},
+  {Ibar}, {Bertoldi}, {Valtchanov}, {Eales}, {Dunne}, {Driver}, {Auld},
+  {Buttiglione}, {Cava}, {Grady}, {Clements}, {Dariush}, {Fritz}, {Hill},
+  {Hornbeck}, {Kelvin}, {Lagache}, {Lopez-Caniego}, {Gonzalez-Nuevo}, {Maddox},
+  {Pascale}, {Pohlen}, {Rigby}, {Robotham}, {Simpson}, {Smith}, {Temi},
+  {Thompson}, {Woodgate}, {York}, {Aguirre}, {Beelen}, {Blain}, {Baker},
+  {Birkinshaw}, {Blundell}, {Bradford}, {Burgarella}, {Danese}, {Dunlop},
+  {Fleuren}, {Glenn}, {Harris}, {Kamenetzky}, {Lupu}, {Maddalena}, {Madore},
+  {Maloney}, {Matsuhara}, {Michaowski}, {Murphy}, {Naylor}, {Nguyen},
+  {Popescu}, {Rawlings}, {Rigopoulou}, {Scott}, {Scott}, {Seibert}, {Smail},
+  {Tuffs}, {Vieira}, {van der Werf}, \& {Zmuidzinas}}]{negrello:10}
+{Negrello}, M., {Hopwood}, R., {De Zotti}, G., {et~al.} 2010, Science, 330,
+  800, 1011.1255
+
+\bibitem[{{Rocha} {et~al.}(2013){Rocha}, {Peter}, {Bullock}, {Kaplinghat},
+  {Garrison-Kimmel}, {O{\~n}orbe}, \& {Moustakas}}]{Rocha:13}
+{Rocha}, M., {Peter}, A.~H.~G., {Bullock}, J.~S., {et~al.} 2013, \mnras, 430,
+  81, 1208.3025
+
+\bibitem[{{Thomas} {et~al.}(2014){Thomas}, {Saglia}, {Bender}, {Erwin}, \&
+  {Fabricius}}]{Thomas:14}
+{Thomas}, J., {Saglia}, R.~P., {Bender}, R., {Erwin}, P., \& {Fabricius}, M.
+  2014, \apj, 782, 39, 1311.3783
+
+\bibitem[{{Tremaine} {et~al.}(2002){Tremaine}, {Gebhardt}, {Bender}, {Bower},
+  {Dressler}, {Faber}, {Filippenko}, {Green}, {Grillmair}, {Ho}, {Kormendy},
+  {Lauer}, {Magorrian}, {Pinkney}, \& {Richstone}}]{Tremaine:02}
+{Tremaine}, S., {Gebhardt}, K., {Bender}, R., {et~al.} 2002, \apj, 574, 740,
+  astro-ph/0203468
+
+\bibitem[{{Vieira} {et~al.}(2010){Vieira}, {Crawford}, {Switzer}, {Ade},
+  {Aird}, {Ashby}, {Benson}, {Bleem}, {Brodwin}, {Carlstrom}, {Chang}, {Cho},
+  {Crites}, {de Haan}, {Dobbs}, {Everett}, {George}, {Gladders}, {Hall},
+  {Halverson}, {High}, {Holder}, {Holzapfel}, {Hrubes}, {Joy}, {Keisler},
+  {Knox}, {Lee}, {Leitch}, {Lueker}, {Marrone}, {McIntyre}, {McMahon}, {Mehl},
+  {Meyer}, {Mohr}, {Montroy}, {Padin}, {Plagge}, {Pryke}, {Reichardt}, {Ruhl},
+  {Schaffer}, {Shaw}, {Shirokoff}, {Spieler}, {Stalder}, {Staniszewski},
+  {Stark}, {Vanderlinde}, {Walsh}, {Williamson}, {Yang}, {Zahn}, \&
+  {Zenteno}}]{vieira:10}
+{Vieira}, J.~D., {Crawford}, T.~M., {Switzer}, E.~R., {et~al.} 2010, \apj, 719,
+  763, 0912.2338
+
+\bibitem[{{Vieira} {et~al.}(2013){Vieira}, {Marrone}, {Chapman}, {De Breuck},
+  {Hezaveh}, {Wei{$\beta$}}, {Aguirre}, {Aird}, {Aravena}, {Ashby}, {Bayliss},
+  {Benson}, {Biggs}, {Bleem}, {Bock}, {Bothwell}, {Bradford}, {Brodwin},
+  {Carlstrom}, {Chang}, {Crawford}, {Crites}, {de Haan}, {Dobbs}, {Fomalont},
+  {Fassnacht}, {George}, {Gladders}, {Gonzalez}, {Greve}, {Gullberg},
+  {Halverson}, {High}, {Holder}, {Holzapfel}, {Hoover}, {Hrubes}, {Hunter},
+  {Keisler}, {Lee}, {Leitch}, {Lueker}, {Luong-van}, {Malkan}, {McIntyre},
+  {McMahon}, {Mehl}, {Menten}, {Meyer}, {Mocanu}, {Murphy}, {Natoli}, {Padin},
+  {Plagge}, {Reichardt}, {Rest}, {Ruel}, {Ruhl}, {Sharon}, {Schaffer}, {Shaw},
+  {Shirokoff}, {Spilker}, {Stalder}, {Staniszewski}, {Stark}, {Story},
+  {Vanderlinde}, {Welikala}, \& {Williamson}}]{vieira:13}
+{Vieira}, J.~D., {Marrone}, D.~P., {Chapman}, S.~C., {et~al.} 2013, \nat, 495,
+  344, 1303.2723
+
+\bibitem[{{Wallington} \& {Narayan}(1993)}]{Wallington:93}
+{Wallington}, S., \& {Narayan}, R. 1993, \apj, 403, 517
+
+\bibitem[{{Wei{\ss}} {et~al.}(2013){Wei{\ss}}, {De Breuck}, {Marrone},
+  {Vieira}, {Aguirre}, {Aird}, {Aravena}, {Ashby}, {Bayliss}, {Benson},
+  {B{\'e}thermin}, {Biggs}, {Bleem}, {Bock}, {Bothwell}, {Bradford}, {Brodwin},
+  {Carlstrom}, {Chang}, {Chapman}, {Crawford}, {Crites}, {de Haan}, {Dobbs},
+  {Downes}, {Fassnacht}, {George}, {Gladders}, {Gonzalez}, {Greve},
+  {Halverson}, {Hezaveh}, {High}, {Holder}, {Holzapfel}, {Hoover}, {Hrubes},
+  {Husband}, {Keisler}, {Lee}, {Leitch}, {Lueker}, {Luong-Van}, {Malkan},
+  {McIntyre}, {McMahon}, {Mehl}, {Menten}, {Meyer}, {Murphy}, {Padin},
+  {Plagge}, {Reichardt}, {Rest}, {Rosenman}, {Ruel}, {Ruhl}, {Schaffer},
+  {Shirokoff}, {Spilker}, {Stalder}, {Staniszewski}, {Stark}, {Story},
+  {Vanderlinde}, {Welikala}, \& {Williamson}}]{Weiss:13}
+{Wei{\ss}}, A., {De Breuck}, C., {Marrone}, D.~P., {et~al.} 2013, \apj, 767,
+  88, 1303.2726
+
+\bibitem[{{Winn} {et~al.}(2004){Winn}, {Rusin}, \& {Kochanek}}]{Winn:04}
+{Winn}, J.~N., {Rusin}, D., \& {Kochanek}, C.~S. 2004, \nat, 427, 613,
+  astro-ph/0312136
+
+\end{thebibliography}
 
 \end{document}
